--- a/views/index.hbs
+++ b/views/index.hbs
@@ -33,22 +33,22 @@
                 {{!-- <a> --}}
                     <li style="color: white;">Popular Cities:</li>
                 {{!-- </a> --}}
-                <a href="/bangalore" id="bangalore">
+                <a href="/link/bangalore" id="bangalore">
                     <li>Bangalore</li>
                 </a>
-                <a href="/newdelhi" id="newdelhi">
+                <a href="/link/delhi" id="newdelhi">
                     <li>New Delhi</li>
                 </a>
-                <a href="/mumbai" id="mumbai">
+                <a href="/link/mumbai" id="mumbai">
                     <li>Mumbai</li>
                 </a>
-                <a href="/hyderabad" id="hyderabad">
+                <a href="/link/hyderabad" id="hyderabad">
                     <li>Hyderabad</li>
                 </a>
             </ul>
         </div>
         <div id="search">
-            <form action="/" method="post">
+            <form action="/postsubmit" method="post">
                 <input id="searchbox" type="text" name="city" placeholder="Enter City Name" required>
                 <input id="subtn" type="submit" value="Check Now">
             </form>
