--- a/views/index2.hbs
+++ b/views/index2.hbs
@@ -24,16 +24,16 @@
                 <a>
                     <li>Popular Cities:</li>
                 </a>
-                <a href="/bangalore">
+                <a href="/link/bangalore">
                     <li>Bangalore</li>
                 </a>
-                <a href="/newdelhi">
+                <a href="/link/delhi">
                     <li>New Delhi</li>
                 </a>
-                <a href="/mumbai">
+                <a href="/link/mumbai">
                     <li>Mumbai</li>
                 </a>
-                <a href="/hyderabad">
+                <a href="/link/hyderabad">
                     <li>Hyderabad</li>
                 </a>
             </ul>
