--- a/views/index2.hbs
+++ b/views/index2.hbs
@@ -48,16 +48,14 @@
             </div>
             <div class="box" id="tempbox">
                 <div id="tempwet">WEATHER:<br>{{weather}}</div>
-                <div id="tempnum">{{temp}}&deg</div>
+                <div id="tempnum">{{temp}}&degC</div>
             </div>
             <div class="box" id="tmbox">
-                <div class="tmtext">Max. Temp<br>{{tmax}}&deg</div>
-                <div class="tmtext">Min. Temp<br>{{tmin}}&deg</div>
+                <div class="tmtext">Max. Temp<br>{{tmax}}&degC</div>
+                <div class="tmtext">Min. Temp<br>{{tmin}}&degC</div>
             </div>
         </div>
     </div>
-
-
 </body>
 
 </html>
