--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,7 +21,7 @@
     <title>Weather App</title>
 </head>
 
-<body>
+<body style="background-image: url(https://images.unsplash.com/photo-1584267385494-9fdd9a71ad75?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80)">
     <div class="container">
         <nav>
             <span id="heading">
