--- a/views/index2.hbs
+++ b/views/index2.hbs
@@ -7,12 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@1,100&family=Kdam+Thmor+Pro&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@1,100&family=Kdam+Thmor+Pro&family=Ubuntu:wght@300&display=swap"
+        rel="stylesheet">
     <title>Weather App</title>
+
+    {{!-- <style>
+        body {
+            background-image: image("https://previews.123rf.com/images/pinkomelet/pinkomelet1607/pinkomelet160700194/60305231-blue-drops-falling-down-of-heavy-rain-weather-on-water.jpg");
+        }
+    </style> --}}
 </head>
 
-<body>
+
+<body style="background-image: url({{background_link}});">
     <div class="container">
         <nav>
             <div id="heading">
